<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.BaseFragment">

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ad_container">

        <Button
            android:id="@+id/load_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_ad"
            android:textSize="18sp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_container" />

        <Button
            android:id="@+id/show_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_ad"
            android:textSize="18sp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintStart_toEndOf="@id/load_ad"
            app:layout_constraintTop_toBottomOf="@id/ad_container" />

        <Button
            android:id="@+id/destroy_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/destroy_ad"
            android:textSize="18sp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintStart_toEndOf="@id/show_ad"
            app:layout_constraintTop_toBottomOf="@id/ad_container"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#1f000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_layout" />

    <TextView
        android:id="@+id/ad_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <CheckBox
        android:id="@+id/is_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/ad_type_video"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/ad_format"
        app:layout_constraintStart_toEndOf="@id/ad_format"
        app:layout_constraintBottom_toBottomOf="@id/ad_format"/>

    <LinearLayout
        android:id="@+id/is_muted_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/ad_format"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/ad_muted_title"/>

        <RadioGroup
            android:id="@+id/is_muted_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/is_muted_radio_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_muted_default"/>

            <RadioButton
                android:id="@+id/is_muted_radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ad_muted_yes"/>

            <RadioButton
                android:id="@+id/is_muted_radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ad_muted_no"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/placement_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#8a000000"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/is_muted_radio_layout"/>

    <ScrollView
        android:id="@+id/log_scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/log_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placement_id"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>